# ared-edge-substrate-node

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  OWNERS  README.md  SECURITY.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: CHAIN_SPECIFICATION.md  KEY_GENERATION.md  RUNTIME_CONFIGURATION.md  UNSIGNED_EXTRINSICS_IMPLEMENTATION.md
k8s/base/: kustomization.yaml  statefulset.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/qa/: kustomization.yaml
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs  service.rs.bak
pallets/carbon-credits/: Cargo.toml
pallets/carbon-credits/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
pallets/telemetry-proofs/: Cargo.toml
pallets/telemetry-proofs/src/: benchmarking.rs  lib.rs  tests.rs  weights.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
