# =============================================================================
# ARED Edge Substrate Node - Node Binary
# =============================================================================

[package]
name = "ared-edge-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "ARED Edge private blockchain node"
build = "build.rs"

[[bin]]
name = "ared-edge-node"
path = "src/main.rs"

[dependencies]
# CLI and service
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
serde_json = "1.0"

# Substrate client
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-aura.workspace = true
sc-consensus-grandpa.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-service.workspace = true
sc-offchain.workspace = true
sc-basic-authorship.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool.workspace = true
sc-transaction-pool-api.workspace = true

# Substrate primitives (from polkadot-sdk stable2409)
sp-api.workspace = true
sp-block-builder.workspace = true
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-2" }
sp-consensus-aura.workspace = true
sp-consensus-grandpa.workspace = true
sp-core.workspace = true
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-2" }
sp-inherents.workspace = true
sp-io.workspace = true
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-2" }
sp-runtime.workspace = true
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-2" }

# RPC dependencies (from polkadot-sdk stable2409)
jsonrpsee = { version = "0.23", features = ["server"] }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-2" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-2" }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-2" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2409-2" }

# Logging
log = "0.4"

# Local runtime
ared-edge-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
default = []
runtime-benchmarks = ["ared-edge-runtime/runtime-benchmarks"]
