# =============================================================================
# ARED Edge Substrate Node - Node Binary
# =============================================================================

[package]
name = "ared-edge-node"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "ARED Edge private blockchain node"
build = "build.rs"

[[bin]]
name = "ared-edge-node"
path = "src/main.rs"

[dependencies]
# CLI and utilities
clap.workspace = true
futures.workspace = true
serde_json = "1.0"
log.workspace = true

# Substrate client
sc-cli.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-aura.workspace = true
sc-consensus-grandpa.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-service.workspace = true
sc-offchain.workspace = true
sc-basic-authorship.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool = { workspace = true, default-features = true }
sc-transaction-pool-api = { workspace = true, default-features = true }

# Substrate primitives
sp-api.workspace = true
sp-block-builder.workspace = true
sp-blockchain.workspace = true
sp-consensus-aura.workspace = true
sp-consensus-grandpa.workspace = true
sp-core.workspace = true
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-io.workspace = true
sp-keyring.workspace = true
sp-runtime.workspace = true
sp-timestamp.workspace = true

# RPC dependencies
jsonrpsee.workspace = true
pallet-transaction-payment-rpc.workspace = true
substrate-frame-rpc-system.workspace = true
frame-system-rpc-runtime-api.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true

# Local runtime
ared-edge-runtime = { path = "../runtime" }

[build-dependencies]
substrate-build-script-utils.workspace = true

[features]
default = []
runtime-benchmarks = ["ared-edge-runtime/runtime-benchmarks"]
