# =============================================================================
# ARED Edge Substrate Node - Runtime
# =============================================================================
# Runtime configuration matching official Polkadot SDK solochain template
# =============================================================================

[package]
name = "ared-edge-runtime"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "ARED Edge private blockchain runtime"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true, default-features = true }

[dependencies]
# Codec and serialization
codec.workspace = true
scale-info.workspace = true
serde_json = { workspace = true, default-features = false, features = ["alloc"] }

# Frame dependencies
frame-support = { workspace = true, features = ["experimental"] }
frame-system.workspace = true
frame-executive.workspace = true
frame-system-rpc-runtime-api.workspace = true
frame-benchmarking = { workspace = true, optional = true }
frame-try-runtime = { workspace = true, optional = true }

# Pallets
pallet-balances.workspace = true
pallet-timestamp.workspace = true
pallet-transaction-payment.workspace = true
pallet-transaction-payment-rpc-runtime-api.workspace = true
pallet-sudo.workspace = true
pallet-aura.workspace = true
pallet-grandpa.workspace = true

# SP (Substrate Primitives) - only what's needed for runtime
sp-api.workspace = true
sp-arithmetic.workspace = true
sp-block-builder.workspace = true
sp-std.workspace = true
sp-consensus-aura = { workspace = true, features = ["serde"] }
sp-consensus-grandpa = { workspace = true, features = ["serde"] }
sp-core = { workspace = true, features = ["serde"] }
sp-genesis-builder.workspace = true
sp-inherents.workspace = true
sp-keyring.workspace = true
sp-offchain.workspace = true
sp-runtime = { workspace = true, features = ["serde"] }
sp-session.workspace = true
sp-storage.workspace = true
sp-transaction-pool.workspace = true
sp-version = { workspace = true, features = ["serde"] }

# Local pallets
pallet-carbon-credits.workspace = true
pallet-telemetry-proofs.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "serde_json/std",
    "frame-support/std",
    "frame-system/std",
    "frame-executive/std",
    "frame-system-rpc-runtime-api/std",
    "frame-benchmarking?/std",
    "frame-try-runtime?/std",
    "pallet-balances/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-sudo/std",
    "pallet-aura/std",
    "pallet-grandpa/std",
    "sp-api/std",
    "sp-arithmetic/std",
    "sp-block-builder/std",
    "sp-std/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-genesis-builder/std",
    "sp-inherents/std",
    "sp-keyring/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-storage/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "pallet-carbon-credits/std",
    "pallet-telemetry-proofs/std",
    "substrate-wasm-builder",
]

runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-sudo/runtime-benchmarks",
    "pallet-transaction-payment/runtime-benchmarks",
    "pallet-carbon-credits/runtime-benchmarks",
    "pallet-telemetry-proofs/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]

try-runtime = [
    "frame-executive/try-runtime",
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "frame-try-runtime/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
    "pallet-carbon-credits/try-runtime",
    "pallet-telemetry-proofs/try-runtime",
    "sp-runtime/try-runtime",
]
