# =============================================================================
# ARED Edge - Carbon Credits Pallet
# =============================================================================
# Implements carbon credit calculation and token logic

[package]
name = "pallet-carbon-credits"
version = "1.0.0"
authors = ["ARED Team <engineering@a-r-e-d.com>"]
edition = "2021"
license = "MIT"
description = "Pallet for carbon credit calculations and token logic"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }
frame-support = { version = "28.0.0", default-features = false }
frame-system = { version = "28.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }
sp-runtime = { version = "31.0.0", default-features = false }

[dev-dependencies]
sp-core = { version = "28.0.0" }
sp-io = { version = "30.0.0" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
]
runtime-benchmarks = ["frame-support/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
