# =============================================================================
# ARED Edge - Carbon Credits Pallet
# =============================================================================
# Implements carbon credit calculation and token logic

[package]
name = "pallet-carbon-credits"
version = "1.0.0"
authors = ["ARED Team <engineering@a-r-e-d.com>"]
edition = "2021"
license = "MIT"
description = "Pallet for carbon credit calculations and token logic"

[dependencies]
codec.workspace = true
scale-info.workspace = true
frame-support.workspace = true
frame-system.workspace = true
sp-runtime.workspace = true
log.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "log/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
