# =============================================================================
# ARED Edge - Telemetry Proofs Pallet
# =============================================================================
# Stores verified telemetry commitments from the Ingest Service

[package]
name = "pallet-telemetry-proofs"
version = "1.0.0"
authors = ["ARED Team <engineering@a-r-e-d.com>"]
edition = "2021"
license = "MIT"
description = "Pallet for storing telemetry proofs and commitments"

[dependencies]
codec.workspace = true
scale-info.workspace = true
frame-support.workspace = true
frame-system.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true

[dev-dependencies]
sp-core.workspace = true
sp-io.workspace = true

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-std/std",
    "sp-runtime/std",
]
runtime-benchmarks = [
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
